--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no, shrink-to-fit=no, viewport-fit=cover"
+    />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-    <title>Portfolio</title>
+    <title>Armando's Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
