--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <title>Armando's Portfolio</title>
+    <style>
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
